# code-style-enforcer

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.worker  README.md  dev.sh  docker-compose.yml  project.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.tsx  main.tsx
frontend/src/api/: apiClient.ts
frontend/src/components/: AgentWeightsBar.tsx  CodeEditor.tsx  RatingPanel.tsx  SuggestionsList.tsx  SummaryGenerator.tsx  WeightHistory.tsx
frontend/src/styles/: main.css
infra/: localstack-init.sh
infra/terraform/: dynamodb.tf  ecs_service_api.tf  ecs_service_worker.tf  iam_roles.tf  main.tf  outputs.tf  redis.tf  sqs_queue.tf  terraform.tfvars.example  variables.tf
src/backend/: config.py  logging_config.py  main.py
src/backend/adapters/: llm_client.py  metrics_client.py  redis_client.py  sqs_client.py
src/backend/agents/: base_agent.py  docstring_agent.py  minimalism_agent.py  naming_agent.py  security_agent.py  style_agent.py
src/backend/analyzer/: __init__.py  parser.py
src/backend/api/: dependencies.py  routes_agents.py  routes_code.py  routes_feedback.py  routes_health.py  schemas.py
src/backend/core/: cache.py  code_hash.py  models.py  rate_limiter.py
src/backend/rl/: policy_store.py  reward_engine.py  rl_trainer.py
src/backend/services/: agent_dispatcher.py  analyzer_service.py  feedback_service.py  suggestion_merger.py
src/backend/utils/: validation.py
src/backend/workers/: feedback_processor.py
tests/integration/: test_rl_feedback_flow.py
