# Author: Bradley R. Kinnard
# License: MIT

[tool.poetry]
name = "code-style-enforcer"
version = "0.1.0"
description = "Multi-agent code analyzer with RL feedback. Agents critique, users vote, weights shift."
authors = ["Bradley R. Kinnard"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.8"
pydantic-settings = "^2.1.0"
structlog = "^23.1.0"
python-dotenv = "^1.0.0"
redis = "^5.0.0"
langchain = "^0.1"
langchain-openai = "^0.1"
openai = "^1.0"
tiktoken = "^0.7"
aioboto3 = "^12.0"
boto3 = "^1.34"
python-jose = {extras = ["cryptography"], version = "^3.3"}
prometheus-client = "^0.19"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.25.0"
ruff = "^0.1.0"
poethepoet = "^0.24.0"

[tool.poe.tasks]
dev = "uvicorn src.backend.main:app --reload --host 0.0.0.0 --port 8000"
worker = "python -m src.backend.workers.feedback_processor"
test = "pytest"
lint = "ruff check src tests"

# Local dev with in-memory queue/dynamo (no LocalStack needed)
[tool.poe.tasks.local]
shell = """
export USE_LOCAL_SQS=true
export USE_LOCAL_DYNAMO=true
echo "Starting in local mode (in-memory SQS + DynamoDB)"
uvicorn src.backend.main:app --reload --host 0.0.0.0 --port 8000
"""

[tool.poe.tasks.local-worker]
shell = """
export USE_LOCAL_SQS=true
export USE_LOCAL_DYNAMO=true
echo "Starting worker in local mode"
python -m src.backend.workers.feedback_processor
"""

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
